If visibility changes while an accelerated animation is running, element jumps around https://bugs.webkit.org/show_bug.cgi?id=29984

Source/WebCore:

Reviewed by Chris Marrin.

Compositing now affects whether RenderLayers for visibility:hidden elements
are included in z-order lists. So we have to dirty those lists when we enter
compopsiting mode.

Test: compositing/visibility/animation-visibility.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::updateVisibilityStatus): Removed trailing whitespace.
(WebCore::RenderLayer::dirtyZOrderLists): Call dirtyZOrderListsInternal(), which doesn't have
to ping the compositor.
(WebCore::RenderLayer::dirtyZOrderListsInternal):
(WebCore::RenderLayer::dirtyZOrderListsIncludingDescendants): Recursively dirty z-order
lists.
* rendering/RenderLayer.h:
* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::enableCompositingMode): When going into compositing mode,
dirty all z-order lists.

LayoutTests:

Reviewed by Chris Marrin.

Add testcase for visibility changing in the middle of an accelerated animation.

* animations/resources/animation-test-helpers.js: Add some constants for readability.
(checkExpectedValue): Add support for testing 'visibility'.
* compositing/visibility/animation-visibility-expected.png: Added.
* compositing/visibility/animation-visibility-expected.txt: Added.
* compositing/visibility/animation-visibility.html: Added.

Canonical link: https://commits.webkit.org/87390@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98776 268f45cc-cd09-0410-ab3c-d52691b4dbfc